tests/compile_fail/into-extra-parens.stderr
error: unexpected argument
  --> $DIR/into-extra-parens.rs:15:11
   |
15 |     #[into(a)]
   |           ^^^
